# django-portifolio

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
portifolio/: settings.py  urls.py
templates/: base.html  home.html
